--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    container_name: db
+    container_name: db1
     image: postgres:14
     ports:
       - 5433:5432
@@ -16,7 +16,7 @@ services:
       start_period: 5s
   
   api:
-    container_name: api
+    container_name: api1
     build: ./
     ports:
       - 8080:8080
