--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projecta",
+  "name": "monstruosa-back-end",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/yup": "^0.32.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "sqlite": "^4.1.2",
