--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
+    "jest": "^29.4.3",
+    "sqlite3": "^5.1.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "typeorm": "^0.3.12",
     "typescript": "^4.9.5"
   },
